--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Crowdfunding[[:space:]]Project[[:space:]]([[:space:]]Power[[:space:]]Bi[[:space:]]).pbix filter=lfs diff=lfs merge=lfs -text
+*.xlsx filter=lfs diff=lfs merge=lfs -text
