--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 Crowdfunding[[:space:]]Project[[:space:]]([[:space:]]Power[[:space:]]Bi[[:space:]]).pbix filter=lfs diff=lfs merge=lfs -text
 *.xlsx filter=lfs diff=lfs merge=lfs -text
+*.pbix filter=lfs diff=lfs merge=lfs -text
+*.twbx filter=lfs diff=lfs merge=lfs -text
+*.twb filter=lfs diff=lfs merge=lfs -text
+*.sql filter=lfs diff=lfs merge=lfs -text
